[package]
name = "yavm"
version = "0.1.0"
authors = ["pilaniya"]
edition = "2021"

[dependencies]
vm-memory = { version = "0.16.1", features = ["backend-mmap"] }
kvm-ioctls = "0.19.1"
kvm-bindings = "0.10.0"
vmm-sys-util = "0.12.1"
# linux-loader = { version = "0.13.0", features = ["default"] }
linux-loader = { path = "linux-loader" }
log = "0.4"
